==> JosephGodVim/STM32F103-SPI-PCM/SYSTEM/spi/spi.c <==
#include "spi.h"
#include "usart.h"
#include "sys.h"

SPI_InitTypeDef  SPI_InitStructure;

void spi_init(void)
{
	GPIO_InitTypeDef GPIO_InitStructure;
	
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA|RCC_APB2Periph_SPI1, ENABLE);
//	//NSS
//	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_4;
//	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IPU;
//	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
//	GPIO_Init(GPIOA, &GPIO_InitStructure);
//	//CLK
//	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_5;
//	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;
//	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
//	GPIO_Init(GPIOA, &GPIO_InitStructure);
//	//MISO
//	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_6;
//	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
//	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
//	GPIO_Init(GPIOA, &GPIO_InitStructure);
//	//MOSI
//	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_7;
//	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;
//	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
//	GPIO_Init(GPIOA, &GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_5 | GPIO_Pin_6 | GPIO_Pin_7;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(GPIOA, &GPIO_InitStructure);

 	GPIO_SetBits(GPIOA, GPIO_Pin_5 | GPIO_Pin_6 | GPIO_Pin_7);
	
	SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;	//Full-Duplex
	SPI_InitStructure.SPI_Mode = SPI_Mode_Slave;	//Slave-Mode
	SPI_InitStructure.SPI_DataSize = SPI_DataSize_16b;	//16bit Data
	SPI_InitStructure.SPI_CPOL = SPI_CPOL_High;		//IDE-High
	SPI_InitStructure.SPI_CPHA = SPI_CPHA_1Edge;	//First Edge
	SPI_InitStructure.SPI_NSS = SPI_NSS_Soft;		//NSS
	SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_256;	//Speed
	SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;		//MSB
	SPI_InitStructure.SPI_CRCPolynomial = 7;
	SPI_Init(SPI1, &SPI_InitStructure);
	SPI_Cmd(SPI1,ENABLE);
}

uint8_t spi_readbyte(uint16_t *rxdata)
{
	if(SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_RXNE) != RESET)
	{
		*rxdata = SPI_I2S_ReceiveData(SPI1);
		//printf("rxdata:%02X", *rxdata);
		return 1;
	}
	return 0;
}

void spi_writebyte(uint16_t txdata)
{
	if(SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) != RESET)
	{
		SPI_I2S_SendData(SPI1, txdata);
		//printf("txdata:%02X", txdata);
	}
}
